<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/g1_header"
                android:padding="5dp"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g1q1"
                    android:textSize="14sp" />

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_g1q1a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG1Q1RadioButtonClicked"
                        android:text="@string/g1q1a1"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radio_g1q1a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG1Q1RadioButtonClicked"
                        android:text="@string/g1q1a2"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radio_g1q1a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG1Q1RadioButtonClicked"
                        android:text="@string/g1q1a3"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radio_g1q1a4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG1Q1RadioButtonClicked"
                        android:text="@string/g1q1a4"
                        android:textSize="14sp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/g1q2"
                    android:textSize="14sp" />

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_g1q2a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG1Q2RadioButtonClicked"
                        android:text="@string/g1q2a1"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radio_g1q2a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG1Q2RadioButtonClicked"
                        android:text="@string/g1q2a2"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radio_g1q2a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG1Q2RadioButtonClicked"
                        android:text="@string/g1q2a3"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radio_g1q2a4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG1Q2RadioButtonClicked"
                        android:text="@string/g1q2a4"
                        android:textSize="14sp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g1q3"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/g1q3a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/g1q3_hint"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/g2_header"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g2q1"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkbox_g2q1a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG2Q1CheckboxClicked"
                        android:text="@string/g2q1a1"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/checkbox_g2q1a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG2Q1CheckboxClicked"
                        android:text="@string/g2q1a2"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/checkbox_g2q1a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG2Q1CheckboxClicked"
                        android:text="@string/g2q1a3"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/checkbox_g2q1a4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG2Q1CheckboxClicked"
                        android:text="@string/g2q1a4"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/g2q2"
                    android:textSize="14sp" />

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_g2q2a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG2Q2RadioButtonClicked"
                        android:text="@string/g2q2a1"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radio_g2q2a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG2Q2RadioButtonClicked"
                        android:text="@string/g2q2a2" />

                    <RadioButton
                        android:id="@+id/radio_g2q2a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG2Q2RadioButtonClicked"
                        android:text="@string/g2q2a3" />

                    <RadioButton
                        android:id="@+id/radio_g2q2a4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG2Q2RadioButtonClicked"
                        android:text="@string/g2q2a4" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g2q3"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/g2q3a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/g2q3_hint"
                    android:inputType="text"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/g3_header"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g3q1"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkbox_g3q1a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG3Q1CheckboxClicked"
                        android:text="@string/g3q1a1"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/checkbox_g3q1a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG3Q1CheckboxClicked"
                        android:text="@string/g3q1a2"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/checkbox_g3q1a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG3Q1CheckboxClicked"
                        android:text="@string/g3q1a3"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/checkbox_g3q1a4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG3Q1CheckboxClicked"
                        android:text="@string/g3q1a4"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/g3q2"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkbox_g3q2a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG3Q2CheckboxClicked"
                        android:text="@string/g3q2a1"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/checkbox_g3q2a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG3Q2CheckboxClicked"
                        android:text="@string/g3q2a2"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/checkbox_g3q2a3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG3Q2CheckboxClicked"
                        android:text="@string/g3q2a3"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/checkbox_g3q2a4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onG3Q2CheckboxClicked"
                        android:text="@string/g3q2a4"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/g3q3"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/g3q3a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/g3q3_hint"
                    android:inputType="text"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Check answers and Submit"
            android:onClick="onCheckAndSubmit"/>
    </LinearLayout>
</ScrollView>
